Trying to branch again
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2014 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/import.less
+++ b/main/webapp/modules/core/styles/import.less
@@ -53,25 +53,45 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   }
   
 #body {
-  position: relative;
-  margin: @padding_loose;
+  position: absolute;
   background: @fill_primary;
   border: 1px solid @chrome_primary;
-  border-radius: @padding_tight;
+  border-radius: @padding_normal;
   }
 
-#top-panel {
+#header-panel {
   padding: @padding_loose;
   }
-  
-#middle-panel {
+
+#file-selection-stage {
+  }
+
+#file-selection-stage-file-panel {
   border-top: 1px solid @chrome_primary;
   border-bottom: 1px solid @chrome_primary;
   background: white;
-  height: 200px;
   overflow: auto;
   }
   
-#bottom-panel {
-  height: 200px;
+#file-selection-stage-control-panel {
+  font-size: 1.3em;
+  div {
+    padding: @padding_normal;
+    }
+  }
+    
+#data-preview-stage {
+  display: none;
+  }
+
+#data-preview-stage-data-panel {
+  border-top: 1px solid @chrome_primary;
+  border-bottom: 1px solid @chrome_primary;
+  background: white;
+  overflow: auto;
+  }
+  
+#data-preview-stage-control-panel {
+  font-size: 1.3em;
+  overflow: auto;
   }
