--- a/main/webapp/modules/core/styles/common.less
+++ b/main/webapp/modules/core/styles/common.less
@@ -403,3 +403,10 @@ img {
 p.body-text {
   margin-bottom: 1em;
 }
+
+.relative-frame {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
