--- a/main/webapp/modules/core/styles/index/import-project-ui.less
+++ b/main/webapp/modules/core/styles/index/import-project-ui.less
@@ -32,3 +32,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
 @import-less url("../theme.less");
+
+#project-upload-form {
+  padding: @padding_loose;
+  font-size: 1.3em;
+}
