--- a/main/webapp/modules/core/styles/index/open-project-ui.less
+++ b/main/webapp/modules/core/styles/index/open-project-ui.less
@@ -41,15 +41,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   overflow: auto;
   position: absolute;
   top: 0px;
-  bottom: 30px;
   left: 0px;
   width: 100%;
   }
 
 #projects-workspace-controls {
   position: absolute;
-  bottom: 0px;
   padding: @padding_normal;
+  background: @fill_primary;
+  border-top: 1px solid @chrome_primary;
+  font-size: 1.3em;
   }
   
 #projects-container .project .last-modified {
