Started implementing parser option UI for separator-based files.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2034 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/common.less
+++ b/main/webapp/modules/core/styles/common.less
@@ -299,6 +299,13 @@ input[type="checkbox"], input[type="radio"], select {
 input.inline {
   vertical-align: middle;
   }
+input.lightweight {
+  vertical-align: baseline;
+  border: none;
+  border-bottom: 1px solid @faint_grey;
+  background-color: @fainter_grey;
+  padding: 0px 2px 1px 2px;
+  }
 
 
 div.grid-layout > table {
