The separator-based file parser option UI is starting to work: it can preview data and react to changing options now.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2035 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/common.less
+++ b/main/webapp/modules/core/styles/common.less
@@ -299,6 +299,9 @@ input[type="checkbox"], input[type="radio"], select {
 input.inline {
   vertical-align: middle;
   }
+input[type='text'].inline {
+  vertical-align: baseline;
+  }
 input.lightweight {
   vertical-align: baseline;
   border: none;
