The importer UI now works for CSV/TSV/separator-based files (all the way to having projects created).
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2036 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/index/default-importing-file-selection-panel.less
+++ b/main/webapp/modules/core/styles/index/default-importing-file-selection-panel.less
@@ -34,11 +34,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 @import-less url("../theme.less");
 
 .default-importing-file-selection-control-panel {
+  font-size: 1.3em;
   position: absolute;
   background: @chrome_secondary;
   padding: @padding_looser;
 }
 .default-importing-file-selection-file-panel {
+  font-size: 1.3em;
   position: absolute;
   background: white;
   overflow: auto;
