--- a/main/webapp/modules/core/styles/index/default-importing-controller.less
+++ b/main/webapp/modules/core/styles/index/default-importing-controller.less
@@ -34,6 +34,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 @import-less url("../theme.less");
 
 #default-importing-progress-panel {
+  font-size: 1.3em;
   padding: @padding_loose;
 }
 
@@ -63,6 +64,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 #default-importing-error-panel {
+  font-size: 1.3em;
   padding: @padding_loose;
 }
 #default-importing-error-message {
@@ -75,6 +77,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 .default-importing-wizard-header {
+  font-size: 1.3em;
   background: @chrome_primary;
   padding: @padding_tight;
 }
