Prevent popup while uploading data to create a project. Made hover-to-highlight behavior in XML importer parser UI more usable: hovering over closing tags also works as expected. Trim text in XML preview to 200 characters and escape HTML characters. Prevent project from getting created if no XML path has been selected.
git-svn-id: http://google-refine.googlecode.com/svn/branches/new-importing-ui@2069 7d457c2a-affb-35e4-300a-418c747d4874

--- a/main/webapp/modules/core/styles/index/xml-parser-ui.less
+++ b/main/webapp/modules/core/styles/index/xml-parser-ui.less
@@ -49,7 +49,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .xml-parser-ui-select-dom .elmt {
   cursor: pointer;
   padding: 2px;
-  border: 1px solid white;
+  border: 1px solid rgba(0,0,0,0);
+}
+
+.xml-parser-ui-select-dom .text {
+  color: #888;
 }
 
 .xml-parser-ui-select-dom .children {
